Oculta container do cabeçalho quando visualizado em dispositivo movel

--- a/css/main.css
+++ b/css/main.css
@@ -127,3 +127,9 @@ body {
         align-items: flex-start;
     }
 }
+
+@media (max-width: 1024px) {
+    .container.navbar {
+        display: none;
+    }
+}
