Ajuste na sombra da tabela

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ body {
 .tab-content {
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 30px 52px 40px -17px rgba(0,0,0,0.1);
 }
 
 .sorting_1 {
@@ -93,6 +93,7 @@ body {
     overflow-x: auto;
     font-weight: bold;
     border-radius: 7px;
+    
 }
 
 .badge {
