Adicionado cores para o status Licença

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,11 @@ body {
     font-weight: bold;
     color: #5a3286 !important;
 }
+.bg-licenca {
+    background-color: #e6cff2 !important;
+    font-weight: bold;
+    color: #5a3286 !important;
+}
 
 .bg-ferias {
     background-color: #e6cff2 !important;
